--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   weather_icons: ^3.0.0
   equatable: ^2.0.7
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
